# img-extraction

./: .dockerignore  .gitignore  CHANGELOG_LOCAL_STORAGE.md  CLAUDE.md  Dockerfile  Dockerfile.windows  README.md  accounts.json  api_service.py  app.py  build.py  build.sh  check_labels.py  chrome_manager.py  collect_captcha.py  cookie_manager.py  custom_api_client.py  data_template.xlsx  driver-service-account.json  extract_info.py  fetch_bien_lai.py  fetch_co.py  fetch_co_new.py  google_drive_utils.py  google_sheet_utils.py  hook-runtime.py  label_captchas.py  local_storage_utils.py  main.py  msa_client.py  pdf_generator.py  pdf_invoice_parser.py  pdf_processor.py  pyproject.toml  receipt_fetcher.py  requirements-minimal.txt  requirements.txt  requirements_exe.txt  service-account-key.json  service_account_quotas.md  (+8 more)
cookies/: 0107250411.cookies  0201722189.cookies  0901067514.cookies  2801686176.cookies  3002141146.cookies
downloaded_pdfs/: template_updated.xlsx
scripts/: SPIKE_README.md  capture_baseline.py  smoke_pyinstaller_pymupdf.py  spike_inspect_pdf_endpoint.py
src/customs_bot/: __init__.py  __main__.py  cli.py  config.py  logging.py
src/customs_bot/features/: __init__.py
src/customs_bot/shared/: __init__.py  models.py  paths.py
static/: icon.icns
static/css/: style.css
templates/: index.html
tests/: conftest.py  test_cli.py  test_config.py  test_logging.py
tests/fixtures/: KNOWN_BUGS.md
tests/fixtures/baselines/: ASSA ABLOY BLHPH038448.json  (+2 more)
tests/shared/: test_models.py  test_paths.py
training_captchas/: labels.txt  labels.txt.backup
(+24 files in other folders)
