[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "customs-receipt-bot"
version = "5.0.0a0"
description = "Tool tải biên lai điện tử từ thuphi.haiphong.gov.vn"
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.27,<1.0",
    "pydantic>=2.6,<3.0",
    "pydantic-settings>=2.2,<3.0",
    "loguru>=0.7,<1.0",
    "pymupdf>=1.24,<2.0",
    "selenium>=4.25,<5.0",
    "webdriver-manager>=4.0,<5.0",
    "google-api-python-client>=2.108",
    "google-auth>=2.23",
    "google-auth-oauthlib>=1.1",
    "google-auth-httplib2>=0.1.1",
    "tenacity>=8.0",
    "openpyxl>=3.1",
    "Pillow>=10.0",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-mock>=3.12",
    "pytest-cov>=5.0",
    "respx>=0.21",
    "ruff>=0.6",
]
build = [
    "pyinstaller>=6.0",
]

[project.scripts]
customs-bot = "customs_bot.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-v --strict-markers"

[tool.ruff]
line-length = 100
target-version = "py310"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "SIM"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["B011"]
